# medical-ai-failure-atlas

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CODEX_3YEAR_BUILD_LOOP.md  COMPLIANCE.md  CONTRIBUTING.md  DATASET_EVALUATION_CARD_V0_1_DRAFT.md  DATA_DICTIONARY.md  LICENSE  Makefile  PUBLIC_RELEASE_BOUNDARY_V0_1.md  PUBLIC_RELEASE_CANDIDATE_STATUS.md  README.md  RELEASE_MANIFEST_V0_1_DRAFT.md  ROADMAP_30DAYS.md  SIDE_PROJECTS.md  SOCIAL_POSTS.md  STATE_LEDGER.md  STRATEGY.md  WEEKLY_SERIES.md  pyproject.toml
adapters/: README.md  __init__.py
config/: models.yaml
data/: README.md  clinical_safety_demo_cases_v0_1.json  failure_atlas_external_sample_v0_1.jsonl  inter_rater_reviewer2_form_v0_1.tsv  medhelm_bilingual_pair_v0_1.tsv  medhelm_remote_rescue_metric_v0_1.json  medical_intelligence_atlas_coverage_matrix_v0_1_20260625.json  medical_intelligence_atlas_release_gate_v0_1_20260625.json  medical_intelligence_atlas_v0_1_20260625.json  multilingual_medical_intelligence_cross_language_ambiguity_report_v0_1_20260625.json  multilingual_medical_intelligence_cross_language_negation_audience_report_v0_1_20260625.json  multilingual_medical_intelligence_cross_language_scope_anchor_report_v0_1_20260625.json  multilingual_medical_intelligence_cross_language_source_support_scope_reconciliation_report_v0_1_20260625.json  multilingual_medical_intelligence_cross_language_temporal_progression_report_v0_1_20260625.json  prompt_set_v2_hard_30.tsv  (+12 more)
medmarks_candidate_env_v0_20260613/environments/failure_atlas_safety_wording/: README.md  judge_prompts.py  pyproject.toml
(+903 files in other folders)
