[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safetyguard"
version = "0.1.0"
description = "SafetyGuard CLI for MedFailBench medical AI safety evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Goktug Ozkan" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
failure-atlas = "failure_atlas.cli:main"
safetyguard = "safetyguard.cli:main"

[tool.setuptools.packages.find]
include = ["failure_atlas*", "safetyguard*"]

[tool.setuptools.package-data]
safetyguard = ["data/*.json", "data/*.jsonl", "data/*.tsv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
